fix(ui): Container - tweak spacing

--- a/packages/ui/src/ui/container/container.module.css
+++ b/packages/ui/src/ui/container/container.module.css
@@ -1,13 +1,13 @@
 .root {
-  padding: var(--space-xxsmall) var(--space-small);
+  padding: var(--space-xsmall) var(--space-small);
 }
 
 .root:first-child {
-  padding-top: var(--space-small);
+  padding-top: var(--space-medium);
 }
 
 .root:last-child {
-  padding-bottom: var(--space-small)
+  padding-bottom: var(--space-medium)
 }
 
 .inner {
